--- a/static/autodrive/autodrive.css
+++ b/static/autodrive/autodrive.css
@@ -9,7 +9,7 @@ body {
 
 .image-overview img {
     max-width: 100%;
-    height: auto;
+    max-height: 500px;
     display: block;
     margin: 0 auto; /* Center the image */
     border-radius: 10px; /* Optional: rounded corners */
